k8s/apps/coder-workspaces/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: coder-workspaces
  namespace: coder-workspaces
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: coder-workspace
  policyTypes:
    - Ingress
